--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -216,8 +216,8 @@
 				</a>
 				<ul class="sub-menu">
 					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/payment/prePaymentSet.htm">
-							商城管理
+						<a href="javascript:;" data-pre="a-menu" data-url="/goods/index">
+							商品管理
 						</a>
 					</li>
 				</ul>
