--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -236,24 +236,14 @@
 				</a>
 				<ul class="sub-menu">
 					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/order/preReturnMoney.htm">
+						<a href="javascript:;" data-pre="a-menu" data-url="/goodsOrders/index">
 						<i class="fa fa-briefcase"></i>
-						退款管理</a>
+						商品订单</a>
 					</li>
 					<li>
 						<a href="javascript:;" id="orderMg" data-pre="a-menu" data-url="/admin/order/preOrderSet.htm">
 						<i class="fa fa-briefcase"></i>
-						订单管理</a>
-					</li>
-					<li >
-						<a href="javascript:;" id="bookMg" data-pre="a-menu" data-url="/admin/order/campingBookMg.htm">
-						<i class="fa fa-briefcase"></i>
-						预定管理</a>
-					</li>
-					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/order/homeMg.htm">
-						<i class="fa fa-briefcase"></i>
-						房间管理</a>
+						咨询订单</a>
 					</li>
 				</ul>
 			</li>
