--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -241,7 +241,7 @@
 						商品订单</a>
 					</li>
 					<li>
-						<a href="javascript:;" id="orderMg" data-pre="a-menu" data-url="/admin/order/preOrderSet.htm">
+						<a href="javascript:;" id="orderMg" data-pre="a-menu" data-url="/questionOrders/index">
 						<i class="fa fa-briefcase"></i>
 						咨询订单</a>
 					</li>
