--- a/aik-app/aik-manager/src/main/webapp/templates/questionOrder/questionOrderView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/questionOrder/questionOrderView.html
@@ -11,52 +11,110 @@
 		</div>
 	</div>
 	<div class="portlet-body form">
-		<form action="" method="post" class="form-inline" id="goodsOrder_vfm" enctype="multipart/form-data">
-			<input type ="hidden" id="id" name="id" value="" th:value="${stoUserOrder.id}" />
+		<form action="" method="post" class="form-inline" id="questionOrder_vfm" enctype="multipart/form-data">
+			<input type ="hidden" id="id" name="id" value="" th:value="${aikQuestionOrder.id}" />
 			<input type ="hidden" id="opt" name="opt" value="" th:value="${opt}" />
 			
 			<table class="table  table-bordered ">
 				<tr>
-					<td>订单号</td>
-					<td>
-						<input type="text" class="form-control r" data-required="true"  data-description="orderNum"  data-describedby="orderNumspan" id="orderNum" name="orderNum" th:value="${stoUserOrder.orderNum}" />
-						<span class="required">*</span>
-						<span class="help-inline prompt" id="orderNumpan" style="color: #000000"></span>
-					</td>
 					<td>用户Id</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true"  data-description="userId"  data-describedby="userIdspan" id="userId" name="userId"  th:value="${stoUserOrder.userId}" />
+						<input type="text" class="form-control r" data-required="true"  data-description="userId"  data-describedby="userIdspan" id="userId" name="userId" th:value="${aikQuestionOrder.userId}" />
 						<span class="required">*</span>
 						<span class="help-inline prompt" id="userIdspan" style="color: #000000"></span>
 					</td>
+					<td>病症描述</td>
+					<td>
+						<input type="text" class="form-control r" data-required="true"  data-description="description"  data-describedby="descriptionspan" id="description" name="description"  th:value="${aikQuestionOrder.description}" />
+						<span class="required">*</span>
+						<span class="help-inline prompt" id="descriptionspan" style="color: #000000"></span>
+					</td>
 				</tr>
 				<tr>
-					<td>订单状态</td>
+					<td>疾病类型</td>
 					<td>
-						<select class="form-control" name="status">
+						<select class="form-control" name="illType">
 							<option value="0" selected="selected">待付款</option>
 							<option value="1">待发货</option>
 							<option value="2">已发货</option>
 							<option value="3">已完成</option>
 						</select>
 					</td>
-					<td>订单金额</td>
-					<td><input type="text" class="form-control" name="amount" value="" th:value="${stoUserOrder.amount}" /></td>
+					<td>询问方式</td>
+					<td><select class="form-control" name="type">
+							<option value="0" selected="selected">匹配医生</option>
+							<option value="1">公开</option>
+						</select>
+					</td>
 				</tr>
 				
 				<tr>
-					<td>实付订单金额</td>
-					<td><input type="text" class="form-control" name="realAmount" value="" th:value="${stoUserOrder.realAmount}" /></td>
-					<td>运费</td>
-					<td><input type="text" class="form-control" name="freightAmount" value="" th:value="${stoUserOrder.freightAmount}" /></td>
+					<td>医生id</td>
+					<td><input type="text" class="form-control" name="doctorId" value="" th:value="${aikQuestionOrder.doctorId}" /></td>
+					<td>问题赏金</td>
+					<td><input type="text" class="form-control" name="amount" value="" th:value="${aikQuestionOrder.amount}" /></td>
 				</tr>
 				
 				<tr>
-					<td>买家留言</td>
-					<td><input type="text" class="form-control" name="leaveMsg" value="" th:value="${stoUserOrder.leaveMsg}" /></td>
-					<td></td>
-					<td></td>
+					<td>订单状态</td>
+					<td>
+						<select class="form-control" name="status">
+							<option value="0" selected="selected">审核中</option>
+							<option value="1">付款中</option>
+							<option value="2">处理中</option>
+							<option value="3">评价中</option>
+							<option value="4">退款中 </option>
+							<option value="5">正常结束</option>
+							<option value="6">失败订单</option>
+						</select>
+					</td>
+					<td>失败类型</td>
+					<td><select class="form-control" name="type">
+							<option value="-1" selected="selected">非失败订单</option>
+							<option value="0">审核不通过</option>
+							<option value="1">医生拒绝</option>
+						</select>
+					</td>
 				</tr>
+				
+				
+				
+				<tr>
+					<td>拒绝原因</td>
+					<td><input type="text" class="form-control" name="refuseReason" value="" th:value="${aikQuestionOrder.refuseReason}" /></td>
+					<td>订单审核状态</td>
+					<td>
+						<select class="form-control" name="auditStatus">
+							<option value="-1" selected="selected">未审核</option>
+							<option value="0">审核不通过</option>
+							<option value="1">审核通过</option>
+						</select>
+					</td>
+				</tr>
+				
+				
+				<tr>
+					<td>订单审核人员id</td>
+					<td><input type="text" class="form-control" name="auditorId" value="" th:value="${aikQuestionOrder.auditorId}" /></td>
+					<td>订单审核原因</td>
+					<td><input type="text" class="form-control" name="auditReason" value="" th:value="${aikQuestionOrder.auditReason}" /></td>
+				</tr>
+				
+				
+				<tr>
+					<td>对医生评价</td>
+					<td><input type="text" class="form-control" name="evaluation" value="" th:value="${aikQuestionOrder.evaluation}" /></td>
+					<td>服务态度评分</td>
+					<td><input type="text" class="form-control" name="serviceAttitude" value="" th:value="${aikQuestionOrder.serviceAttitude}" /></td>
+				</tr>
+				
+				<tr>
+					<td>回答质量评分</td>
+					<td><input type="text" class="form-control" name="answerQuality" value="" th:value="${aikQuestionOrder.answerQuality}" /></td>
+					<td>服务态度评分</td>
+					<td><input type="text" class="form-control" name="serviceAttitude" value="" th:value="${aikQuestionOrder.serviceAttitude}" /></td>
+				</tr>
+				
 			</table>
 			
 			
@@ -72,18 +130,22 @@
 					<thead>
 					<tr>
 						<th>编号</th>
-						<th>商品名称</th>
-						<th>数量</th>
-						<th>金额</th>
+						<th>问题描述</th>
+						<th>问题类型</th>
 						<th>操作</th>
 					</tr>
 					</thead>
 					<tbody>
-					<tr class="odd gradeX"  th:each="stoUserOrderDetail,iterStat : ${stoUserOrderDetails}"  >
-						<td th:text="${stoUserOrderDetail.id}"></td>
-						<td th:text="${stoUserOrderDetail.goodsId}"></td>
-						<td th:text="${stoUserOrderDetail.number}"></td>
-						<td th:text="${stoUserOrderDetail.amount}"></td>
+					<tr class="odd gradeX"  th:each="aikQuestion,iterStat : ${aikQuestions}"  >
+						<td th:text="${aikQuestion.id}"></td>
+						<td th:text="${aikQuestion.description}"></td>
+						<td>
+							<div th:switch="${aikQuestion.type}">
+								<span th:case="'0'">初始提问 </span>
+								<span th:case="'1'">追问 </span>
+								<span th:case="'2'">评分</span>
+							</div>
+						</td>
 						<td></td>
 					</tr>
 					</tbody>
@@ -106,15 +168,15 @@
 </div>
 
 <script>
-window.foodOrderView = null;
-var foodOrderView  = {
-		fm : jQuery("#goodsOrder_vfm"),
+window.questionOrderView = null;
+var questionOrderView  = {
+		fm : jQuery("#questionOrder_vfm"),
 		
 		basePath : jQuery("#basePath").val(),
 		//初始化
 		init : function(){
 			if(jQuery("#opt").val() == "view"){
-				foodOrderView.readOnlyPallet();
+				questionOrderView.readOnlyPallet();
 			}
 			this.bindEvent();
 			this.initValidate();
@@ -129,9 +191,9 @@ var foodOrderView  = {
 				Dialog.confirm({
 					content:'确定保存?',
 					onSubmitted:function(){
-   						if(UiUtils.check("goodsOrder_vfm")){
+   						if(UiUtils.check("questionOrder_vfm")){
    							//updateAdmin();
-   							var url = _this.basePath + "/goodsOrders/update";
+   							var url = _this.basePath + "/questionOrders/update";
 							_this.ajaxSubmit(url);
    						}
    					}
@@ -148,7 +210,7 @@ var foodOrderView  = {
     			jQuery('#tabli_11').trigger('click'),
 				jQuery('#tabli_2').remove(),
 				jQuery('#tab_2').remove(),
-				goodsOrderPage.load(1);
+				qeustionOrderPage.load(1);
     	},
 		//禁止输入
    		readOnlyPallet: function(){
@@ -216,7 +278,7 @@ var foodOrderView  = {
    		
    		initValidate : function(){
    		
-    		jQuery('#goodsOrder_vfm').validate({
+    		jQuery('#questionOrder_vfm').validate({
 				onKeyup : true,
 				sendForm : false,
 				eachValidField : function() {
@@ -241,6 +303,6 @@ var foodOrderView  = {
  </script> 
 <script>
 jQuery(document).ready(function(){    
-	foodOrderView.init();
+	questionOrderView.init();
 });
 </script>
