--- a/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorManage.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/doctor/doctorManage.html
@@ -70,6 +70,28 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
+										<label class="control-label col-md-3">注册开始时间</label>
+										<div class="col-md-9">
+											<input readonly class="form-control date-picker" name="inTime" id="inTime" size="16" type="text" value=""
+											 data-date-format="yyyy-mm-dd" data-date-viewmode="years"/>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label class="control-label col-md-3">注册结束时间</label>
+										<div class="col-md-9">
+											<input readonly class="form-control date-picker" name="outTime" id="outTime" size="16" type="text" value=""
+											  data-date-format="yyyy-mm-dd" data-date-viewmode="years"/>
+										</div>
+									</div>
+								</div>
+							</div>
+							
+							<!--/row-->
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
 										<label class="control-label col-md-3">是否有效</label>
 										<div class="col-md-9">
 											<select class="form-control" name="deleteStatus">
@@ -171,6 +193,14 @@
     		bindEvent : function(){
     			var _this = this;
     			//绑定添加单击事件
+    			jQuery("#inTime").datepicker({
+    				language: 'zh-CN',
+    				autoclose:true
+    			});
+    			jQuery("#outTime").datepicker({
+    				language: 'zh-CN',
+    				autoclose:true
+    			});
     			jQuery("#add_ar").bind("click", function(){
 					Ajax.load({
 	    				url: _this.basePath + "/doctors/add",
